img içine Resimler atildi

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <!--Kişisel bilgiler-->
         <p> 7 Mayıs 1990 Ankara doğumluyum. İlköğrenimimi Ankara Emek Mahallesinde bulunan 
             <b><i>Hamdullah Suphi Tanrıöver</i></b>  ilköğretim okulunda tamamladım.</p>
-                <img src=".gitignore/img/XXXL.webp" 
+                <img src="img/XXXL.webp" 
                          alt="Hamdullah Suphi Okul Resmi" 
                              title="Hamdullah Suphi Okul Resmi"
                          width="400"
                             height="200"   />             
              
                 <p>  Lise öğrenimimi ise <b><i>Ümitköy Anadolu Lisesi</i></b>'nde tamamladım. </p>
-              <img src=".gitignore/img/ÜAL.jpg" 
+              <img src="img/ÜAL.jpg" 
                         alt="ÜAL Resim" 
                             title="Ümitköy Anadolu Lisesi Resim"
                          width="400"
@@ -91,7 +91,7 @@
             </li>
             <li>
                 <h3>Mentalist</h3>
-                <img src=".gitignore/img/the-mentalistimg.jpg"
+                <img src="img/the-mentalistimg.jpg"
                     alt="MentalistAfis" 
                         title="Mentalistİmaj"
                          width="350"
@@ -108,7 +108,7 @@
             </li>
             <li>
                <p> <h3>De Ja Vu</h3>
-                <img src=".gitignore/img/DejaVUimg.jpg" 
+                <img src="img/DejaVUimg.jpg" 
                     alt="DejaVUimg"
                         title="DanzelWashington"
                             width="200"
@@ -121,7 +121,7 @@
             <li>
                 <h3>Kelebek</h3>
 
-                <img src=".gitignore/img/HenriCharrerie.jfif" 
+                <img src="img/HenriCharrerie.jfif" 
                     alt="Kelebek"
                         title="Henrî Charriêrre-Kelebek"
                             width="300"
@@ -131,7 +131,7 @@
             </li>
             <li>
                 <h3>Dar Koridor</h3>
-                <img src=".gitignore/img/dar-koridor-daron-acemoglu-james-a-robinson-z.jpg" 
+                <img src="img/dar-koridor-daron-acemoglu-james-a-robinson-z.jpg" 
                     alt="DaronAcemoğlu"
                         title="DaronAcemoğlu-DarKoridor"
                             width="250"
